swen430as2/test_files/valid/unions/UnionType_Valid_07.while
type msgType1 is {int[] payload}
type msgType2 is {int header, int[] payload}
type msgType is msgType1 | msgType2

msgType id(msgType m) {
	return m;
}

void main() {
     msgType m1 = {payload: [1,2,3]};
     msgType m2 = {header: 123, payload: [1,2,3]};
     assert id(m1) == {payload: [1,2,3]};
     assert id(m2) == {header: 123, payload: [1,2,3]};     
}
