swen430as2/test_files/invalid/unions/mine_invalid_01.while
type nint is null|int
type nnint is null|int
type nirec is null|int|{int f}

void main() {
    nirec[] xs = [1,null,2];
    nnint[] xs1 = xs;
    //
    assert xs == xs1;
    //
    assert xs[0] == 1;
    assert xs[1] == null;
    assert xs[2] == 2;
    //
    nirec[] ys = [1,null,{f:1},1,2,4,null];
    //
    assert ys[0] == 1;
    assert ys[1] == null;
    assert ys[2] == {f:1};
    assert ys[3] == 1;
    assert ys[4] == 2;
    assert ys[5] == 4;
    assert ys[6] == null;
}
